--- a/resources/css/tailwind.css
+++ b/resources/css/tailwind.css
@@ -13,6 +13,10 @@
     }
 }
 
+a {
+    @apply text-accent-500 hover:text-accent-700 cursor-pointer;
+}
+
 .btn {
     @apply flex flex-row justify-start items-center rounded-lg py-2 px-4 transition duration-250 ease-linear cursor-pointer focus:outline-none;
     &.primary {
